--- a/gallary.html
+++ b/gallary.html
@@ -7,6 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -71,7 +73,7 @@
       </div>
       <div class="col-md-6 text-white">
         <h4 style="color: rgb(27, 51, 51);">In-Hand Feel</h4>
-        <p style="font: size 400px;;">Balanced weight and ergonomic design provide comfort whether you're gaming or browsing.</p>
+        <p style="font: size 400px;">Balanced weight and ergonomic design provide comfort whether you're gaming or browsing.</p>
       </div>
     </div>
 
@@ -86,6 +88,7 @@
     <p class="mb-0">&copy; 2025 AM Mobile. Designed by Amit. All rights reserved.</p>
   </div>
 </footer>
+<script src="script.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
